--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 requests==2.26.0
 boto3==1.24.87
 polars==0.10.26
+psutil==5.8.0
 
 # Web development
 flask==2.0.1
@@ -25,4 +26,3 @@ black==22.3.0
 
 # Code linting
 pylint==2.15.3
-
